infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-aks-app-svc
  namespace: sampleapp
spec:
  selector:
    app: sample-aks-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
